--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,11 @@ dependencies = [
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.dev.dependencies]
+black = "^25.1.0"
+isort = "^6.0.0"
+
+[tool.black]
+line-length = 120
+
