--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,27 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
 isort = "^6.0.0"
+mypy = "^1.15.0"
+django-stubs = "^5.1.3"
 
 [tool.black]
 line-length = 120
 
+[tool.isort]
+profile = "black"
+
+[tool.mypy]
+plugins = ["mypy_django_plugin.main"]
+python_version = "3.13"
+strict = true
+
+[[tool.mypy.overrides]]
+module = "*.migrations.*"
+ignore_errors = true
+
+[[tool.mypy.overrides]]
+module = "manage"
+ignore_errors = true
+
+[tool.django-stubs]
+django_settings_module = "oz_Django8.settings"
